fastrace-macro/tests/ui/err/has-expr-argument.stderr
error: expected identifier, found keyword `true`
 --> tests/ui/err/has-expr-argument.rs:5:9
  |
5 | #[trace(true)]
  |         ^^^^
