fastrace-macro/tests/ui/err/has-expr-argument.rs
use fastrace::trace;

#[trace(true)]
fn f() {}

fn main() {}
